# psd-to-json

./: README.md  demo_config.json  pyproject.toml
src/psd-to-json_package_nlfn/: config.json
src/psd_to_json.egg-info/: SOURCES.txt  requires.txt  top_level.txt
src/psd_to_json_nlfn.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/psd_to_json_package/: main.py  psd-to-json.config
src/psd_to_json_package/src/core/: psd_processor.py
src/psd_to_json_package/src/types/: sprite.py  tiles.py
src/psd_to_json_package/src/types/sprite_types/: animation.py  atlas.py  basic.py  spritesheet.py
test-dir/: psd-to-json.config
