[project]
name = "psd-to-json_nlfn"
version = "0.0.1"
authors = [
  { name="Nate Laffan", email="nate.laffan@gmail.com" },
]
description = "Output layers of a psd as optimized assets with manifest."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"